cmake_minimum_required(VERSION 3.2)

project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})

set(HEADERS)

set(SOURCES
    ip_filter.cpp
)

add_executable(ip_filter ${HEADERS} ${SOURCES})

set_target_properties(ip_filter PROPERTIES
    CXX_STANDART 14
    CXX_STANDART_REQUIRED ON
)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT ap@devandy.me)

include(CPack)